feat: add pagination to GET /documents endpoint
- Add paginated findByProjectIdOrderByUpdatedAtDesc() to DocumentRepository
- Add getDocumentsByProjectPaginated() to DocumentService returning Page<DocumentDTO>
- Update DocumentController GET endpoint with optional page (default 0) and size (default 50, max 100) params
- Return Spring Data Page response with metadata (totalElements, totalPages, number, size)
- Add unit tests for paginated service method in DocumentServiceTest
- Add MockMvc integration tests for pagination params in DocumentControllerTest
- Update E2E getAllDocuments() helper to parse Page content field
- All 344 tests pass